--- a/src/main/resources/messages/message_en.properties
+++ b/src/main/resources/messages/message_en.properties
@@ -1,3 +1,7 @@
 #영어버전
 hi=hello
 message.welcom={0}{1} 영어
+
+NotBlank=입력하시오 영어	
+NotBlank.boardTitle= 제목은필수 영어
+NotBlank.dto.boardTitle= 공지 제목 필수 영어
