--- a/src/main/resources/messages/message_ko.properties
+++ b/src/main/resources/messages/message_ko.properties
@@ -1,3 +1,7 @@
 #한국어 버전
 hi=안녕
 message.welcome=환닝{0} 님 당신의 생일은 {1} 입니다한국어
+
+NotBlank=입력하시오
+NotBlank.boardTitle= 제목은필수
+NotBlank.dto.boardTitle= 공지 제목 필수
