--- a/src/main/resources/messages/message_jp.properties
+++ b/src/main/resources/messages/message_jp.properties
@@ -1,7 +1,7 @@
-#일본어 버전
+# 일어 버전
 hi=こんにちは
-message.welcome=환닝{0} 님 당신의 생일은 {1} 입니다일본어
+message.welcome=ようこそ {0} あなたの誕生日は {1} です
 
-NotBlank=입력하시오 일본
-NotBlank.boardTitle= 제목은필수 일본
-NotBlank.dto.boardTitle= 공지 제목 필수 일본
+NotBlank=入力してください
+NotBlank.boardTitle=タイトルは必須です
+NotBlank.dto.boardTitle=お知らせ事項のタイトルは必須です
